# hobot_clip

./: README.md  README_cn.md
clip_encode_image/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
clip_encode_image/include/: action_server.h  clip_encode_image_node.h  common.h
clip_encode_image/src/: action_server.cpp  clip_encode_image_node.cpp  main.cpp
clip_encode_text/: CHANGELOG.md  README.md  README_cn.md  package.xml  setup.cfg  setup.py
clip_manage/: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
clip_manage/include/: clip_manage_node.h  database.h  feature_workflow.h  image_action_client.h  item.h  text_action_client.h
clip_manage/launch/: hobot_clip_manage.launch.py
clip_manage/src/: clip_manage_node.cpp  database.cpp  feature_workflow.cpp  image_action_client.cpp  item.cpp  main.cpp  text_action_client.cpp
clip_msgs/: CHANGELOG.md  CMakeLists.txt  package.xml
test/: test_action_client.py
